# aiis

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/: index.md
docs/architecture/: a2a-protocol.md  langgraph-workflow.md  mcp-server.md  observability.md  overview.md  rag-system.md
docs/guides/: build-and-run.md  configuration.md  debugging.md  deployment.md  getting-started.md
docs/modules/: domain-agents.md  supervisor-agent.md  webhook-api.md
kibana/: setup.sh
kibana/dashboards/: aiis-dashboards.ndjson
knowledge-base/post-purchase/architecture/: order-lifecycle.md
knowledge-base/post-purchase/previous-issues/: issue-289-shipping-delay.md
knowledge-base/post-purchase/runbooks/: fulfillment-runbook.md
knowledge-base/pre-purchase/architecture/: pdp-architecture.md
scripts/: create_kibana_dashboards.py  index_kb.py  simulate_issue.py  simulate_webhook.py
src/: github_client.py
src/a2a/: __init__.py  client.py  messages.py  registry.py  server.py  transport.py
src/agents/: __init__.py  state.py
src/api/: webhook.py
src/kafka/: __init__.py  consumer.py  producer.py  topics.py
src/llm/: __init__.py  factory.py
src/mcp_server/: __init__.py  server.py
src/observability/: __init__.py  elasticsearch_client.py  events.py  logger.py  tracer.py
src/rag/: __init__.py  indexer.py  retriever.py
src/workflow/: __init__.py  graph.py
tests/: test_a2a.py  test_mcp_tools.py  test_supervisor.py  test_workflow.py
tests/browser/: test_aiis_browser.py
(+15 files in other folders)
