[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiis"
version = "1.0.0"
description = "Agentic Issue Investigation System - Multi-agent AI platform for automated GitHub issue triage"
requires-python = ">=3.12"
dependencies = [
    # Core AI / Agent frameworks
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",

    # API / Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",

    # Data / Validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",

    # RAG / Vector DB
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # Observability
    "elasticsearch[async]>=8.15.0,<9.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[project.scripts]
aiis-server = "src.api.webhook:app"
aiis-index = "scripts.index_kb:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
]
